# CLI-agent

./: .gitignore  CLAUDE.md  README.md  log_server.py  pyproject.toml
agent-memory/: personality.json
agent-memory/projects/: 276106676458.json
example/: poem.txt
src/agent/: log_server.py  logger.py
src/agent/cli/: __init__.py  app.py  display.py
src/agent/config/: __init__.py  settings.py
src/agent/core/: __init__.py  loop.py  state.py
src/agent/memory/: commands.py  config.py  context.py  digest.py  digest_worker.py  llm.py  manager.py  models.py  onboarding.py  personality.py  prompts.py  session.py  store.py  tokens.py
src/agent/permissions/: __init__.py  gates.py
src/agent/tools/: __init__.py  check_permissions.py  delete_common.py  delete_dir.py  delete_file.py  dummy.py  edit_common.py  file_rewrite.py  list_dir.py  make_dir.py  read_file.py  registry.py  str_replace.py  write_file.py
tests/: test_delete_permissions.py  test_memory_commands.py  test_memory_context.py  test_memory_digest.py  test_memory_models.py  test_memory_onboarding.py  test_memory_personality.py  test_memory_personality_commands.py  test_memory_project_detect.py  test_memory_session.py  test_memory_session_end.py  test_memory_store.py
