[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-agent"
version = "0.1.0"
description = "A CLI agent built from scratch"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
agent = "agent.cli.app:main"
log-server = "agent.log_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
